# luatos-cli

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/luatos-cli/: Cargo.toml
crates/luatos-cli/src/: cmd_build.rs  cmd_device.rs  cmd_doctor.rs  cmd_flash.rs  cmd_fota.rs  cmd_log.rs  cmd_project.rs  cmd_project_wizard.rs  cmd_resource.rs  cmd_serial.rs  cmd_soc.rs  event.rs  main.rs
crates/luatos-flash/: Cargo.toml
crates/luatos-flash/src/: air6201.rs  bk7258.rs  ccm4211.rs  device.rs  ec718.rs  lib.rs  sf32lb5x.rs  xt804.rs
crates/luatos-gui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/luatos-gui/src/: App.vue  style.css
crates/luatos-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/luatos-gui/src-tauri/src/: main.rs  state.rs
crates/luatos-gui/src-tauri/src/commands/: build.rs  dialog.rs  flash.rs  log.rs  mod.rs  project.rs  resource.rs  serial.rs  settings.rs  soc.rs
crates/luatos-gui/src/components/: SerialBar.vue
crates/luatos-gui/src/stores/: serial.ts
crates/luatos-gui/src/views/: BuildView.vue  FlashView.vue  LogView.vue  ProjectView.vue  ResourceView.vue  SettingsView.vue
crates/luatos-log/: Cargo.toml
crates/luatos-log/src/: lib.rs  smart.rs
crates/luatos-luadb/: Cargo.toml  build.rs
crates/luatos-luadb/csrc/: luac_helper.c  mklfs_helper.c
crates/luatos-luadb/src/: build.rs  embedded_helpers.rs  lib.rs
crates/luatos-mcp/: Cargo.toml
crates/luatos-mcp/src/: main.rs
crates/luatos-project/: Cargo.toml
crates/luatos-project/src/: analyze.rs  archive.rs  import.rs  lib.rs  lua_deps.rs  template.rs  wizard.rs
crates/luatos-resource/: Cargo.toml
crates/luatos-resource/src/: lib.rs
crates/luatos-serial/: Cargo.toml
crates/luatos-serial/src/: lib.rs
crates/luatos-soc/: Cargo.toml
crates/luatos-soc/src/: combine.rs  info.rs  lib.rs  pack.rs  unpack.rs
crates/sftool-lib/: Cargo.toml  README.md
crates/sftool-lib/src/: erase_flash.rs  error.rs  lib.rs  progress.rs  ram_stub.rs  read_flash.rs  reset.rs  speed.rs  stub_config.rs  utils.rs  write_flash.rs
crates/sftool-lib/src/common/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  write_flash.rs
crates/sftool-lib/src/sf32lb52/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  write_flash.rs
crates/sftool-lib/src/sf32lb55/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  speed.rs  write_flash.rs
crates/sftool-lib/src/sf32lb56/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  speed.rs  write_flash.rs
crates/sftool-lib/src/sf32lb58/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  speed.rs  write_flash.rs
crates/sftool-lib/tests/: stub_config_case_test.rs  stub_config_test.json  stub_config_test.rs  utils_test.rs
docs/: air6208-flash-protocol.md  air8101-flash-protocol.md  ccm4211-debug-notes.md  ccm4211-flash-protocol.md  dev-hardware-env.md  ec718-flash-protocol.md  sf32lb58-flash-protocol.md
gui/: Cargo.toml
gui/src/: app.rs  config.rs  main.rs
gui/src/ui/: log_viewer.rs  mod.rs  project.rs  resource.rs  upgrade.rs
refs/: 原始需求.md
refs/origin_tools/dtools/ec618/: run.bat
refs/origin_tools/dtools/ec618/config/: ec616(s).json
refs/origin_tools/dtools/ec7xx/config/: ec716e.json  ec716s.json  ec718hm.json  ec718p.json  ec718pm.json  ec718s.json  ec718u.json  ec718um.json
refs/origin_tools/dtools/ec7xx/dep/posix/: ecsecure
refs/origin_tools/dtools/ec7xx/dep/windows/: Release_Note_Deltagen.txt
refs/origin_tools/dtools/ec7xx_no_hls/config/: ec716e.json  ec716s.json  ec718hm.json  ec718pm.json  ec718pv.json  ec718s.json  ec718u.json  ec718um.json
refs/origin_tools/ec_download/: PrMgrCfg.json
refs/origin_tools/ec_download/product_sets/ec716_products/ec716e/base_config_files/: config_ec716e_prd_uart.baseini  config_ec716e_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec716_products/ec716s/base_config_files/: config_ec716s_prd_uart.baseini  config_ec716s_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718_products/ec718h/base_config_files/: config_ec718h_prd_uart.baseini
refs/origin_tools/ec_download/product_sets/ec718_products/ec718p/base_config_files/: config_ec718p_prd_uart.baseini  config_ec718p_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718_products/ec718s/base_config_files/: config_ec718s_prd_uart.baseini  config_ec718s_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718_products/ec718u/base_config_files/: config_ec718u_prd_uart.baseini  config_ec718u_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718_products/ec718u/format/: format_ec718u.json
refs/origin_tools/ec_download/product_sets/ec718m_products/ec718hm/base_config_files/: config_ec718hm_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718m_products/ec718pm/base_config_files/: config_ec718pm_prd_uart.baseini  config_ec718pm_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718m_products/ec718pm/format/: format_ec718pm.json
refs/origin_tools/ec_download/product_sets/ec718m_products/ec718sm/base_config_files/: config_ec718sm_prd_uart.baseini  config_ec718sm_prd_usb.baseini
refs/origin_tools/ec_download/product_sets/ec718m_products/ec718um/base_config_files/: config_ec718um_prd_uart.baseini
refs/soc_files/: LuatOS-SoC_V0001_SF32LB58.soc  LuatOS-SoC_V1009_Air1601.soc  LuatOS-SoC_V1011_Air1601_6M.soc  LuatOS-SoC_V1013_Air1601.soc  LuatOS-SoC_V1013_Air1602.soc  LuatOS-SoC_V2001_Air6208_101.soc  LuatOS-SoC_V2013_Air8101.soc  LuatOS-SoC_V2029_Air780EPM_1.soc  LuatOS-SoC_V2031_Air8000_105.soc
tests/air1601_test_script/: main.lua
tests/air6208_test_scripts/: main.lua
tests/air8000_test_script/: main.lua
