[package]
name = "luatos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuatOS CLI tool — flash, log, project management"

[[bin]]
name = "luatos-cli"
path = "src/main.rs"

[dependencies]
luatos-soc = { path = "../luatos-soc" }
luatos-luadb = { path = "../luatos-luadb" }
luatos-flash = { path = "../luatos-flash" }
luatos-serial = { path = "../luatos-serial" }
luatos-project = { path = "../luatos-project" }
luatos-log = { path = "../luatos-log" }
luatos-resource = { path = "../luatos-resource" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger.workspace = true
log.workspace = true
ctrlc = "3"
serialport.workspace = true
toml.workspace = true
chrono.workspace = true
ureq = { workspace = true }
indicatif = { workspace = true }
