[package]
name = "luatos-flash"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuatOS flash protocols — BK7258, EC618, etc."

[dependencies]
luatos-soc = { path = "../luatos-soc" }
luatos-luadb = { path = "../luatos-luadb" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
log.workspace = true
zip.workspace = true
tempfile = "3"
walkdir.workspace = true
