[package]
name = "luatos-flash"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuatOS flash protocols — BK7258, EC618, etc."

[dependencies]
luatos-soc = { path = "../luatos-soc" }
luatos-luadb = { path = "../luatos-luadb" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
log.workspace = true
zip.workspace = true
tempfile = "3"
walkdir.workspace = true
md5 = "0.7"
sha2.workspace = true
crc32fast = "1"
sevenz-rust2.workspace = true
sftool-lib = { git = "https://github.com/wendal/sftool", branch = "remove-probe-rs-dep" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_Communication",
] }
