[package]
name = "luatos-luadb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuaDB script image packer + embedded Lua 5.3 compiler"

[dependencies]
anyhow.workspace = true
log.workspace = true
walkdir.workspace = true
tempfile.workspace = true
sha2.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[build-dependencies]
cc = "1"
