[package]
name = "luatos-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuatOS MCP server backed by luatos-cli"

[[bin]]
name = "luatos-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp = { version = "1.4.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
