[package]
name = "luatos-resource"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LuatOS 固件资源清单获取与下载"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
ureq.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
