[package]
name = "luatos-serial"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serial port enumeration and log streaming"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serialport.workspace = true
log.workspace = true
chrono.workspace = true
