[package]
name = "sftool-lib"
version = "0.2.2"
edition = "2024"
description = "SiFli SoC serial utility library"
license = "Apache-2.0"
documentation = "https://docs.rs/sftool-lib"
repository = "https://github.com/OpenSiFli/sftool"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
cli = ["clap"]

[dependencies]
serialport = "4.7.0"
rust-embed = { version = "8.6.0", features = ["debug-embed", "compression"] }
strum = {version = "0.27.1",features = ["derive"]}
phf = { version = "0.11", features = ["macros"] }
tracing = "0.1.41"
ihex = "3.0"
goblin = "0.9.3"
memmap2 = "0.9.5"
crc = "3.2.1"
tempfile = "3.17.1"
indicatif = "0.17.11"
clap = { version = "4.2.1", features = ["derive"], optional = true }
bitfield = "0.19.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
